--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
           key: prod-composer-${{ hashFiles('composer.lock') }}
           restore-keys: |
             prod-composer-
-      - name: Composer package install
-        run: composer install
+      - name: Composer package update
+        run: composer update
 
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
